# screenShot

./: CMakeLists.txt  QtScreenShotTool.pro  README.md  drawingoperationstack.cpp  drawingoperationstack.h  main.cpp  qtscreenshot.cpp  qtscreenshot.h  qtscreenshoteditarea.cpp  qtscreenshoteditarea.h  qtscreenshottoolbar.cpp  qtscreenshottoolbar.h  widget.cpp  widget.h  widget.ui
